# azamcodec-rs

./: .gitignore  Cargo.toml  README.md
.github/: release.yml
.github/workflows/: bench.yml  build.yml  publish.yml
benches/: decode_benchmark.rs  decode_odd_benchmark.rs  encode_benchmark.rs  encode_odd_benchmark.rs
src/: decode.rs  encode.rs  lib.rs
