[package]
name = "azamcodec"
version = "0.1.5"
edition = "2021"
authors = [ "Azamshul Azizy <azamshul@gmail.com>" ]
license = "MIT"
repository = "https://github.com/azam/azamcodec-rs"
description = "Encoder and decoder library for Azam Codec"
categories = ["encoding", "decoding", "data-structures"]
keywords = [ "azam", "identifier", "sortable" ]

[lib]
name = "azamcodec"

[[bench]]
name = "decode_benchmark"
path = "benches/decode_benchmark.rs"
harness = false

[[bench]]
name = "decode_odd_benchmark"
path = "benches/decode_odd_benchmark.rs"
harness = false

[[bench]]
name = "encode_benchmark"
path = "benches/encode_benchmark.rs"
harness = false

[[bench]]
name = "encode_odd_benchmark"
path = "benches/encode_odd_benchmark.rs"
harness = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
uuid = "1.7.0"

[package.metadata.docs.rs]
all-features = true
